<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange_bright"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#ffffff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="45dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:weightSum="6">


                <ImageView
                    android:id="@+id/imgBookImage1"
                    android:layout_width="0dp"
                    android:layout_height="118dp"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/name_of_the_book"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBookAuthor1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookName1"
                        android:padding="8dp"
                        android:text="@string/name_of_the_author"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtBookPrice1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookAuthor1"
                        android:layout_alignParentBottom="true"
                        android:padding="8dp"
                        android:text="@string/rs_299"
                        android:textColor="#357a38"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/txtBookRating1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:text="@string/_4_5"
                    android:textColor="#ffca28"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_ratings" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/llContent1">

                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:layout_margin="10dp"
                    android:padding="6dp"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    />


            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


    <RelativeLayout
        android:id="@+id/progressLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/favourite"
        android:text="@string/add_to_favourites"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>